# SpotifyPlus

./: .gitignore  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/com/lenerd/spotifyplus/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs/: host.js
app/src/main/assets/nodejs-src/: host.ts  package-lock.json  package.json  tsconfig.json
app/src/main/assets/nodejs-src/bridge/: bridge.ts
app/src/main/assets/nodejs-src/core/: logger.ts  models.ts  protocol.ts
app/src/main/assets/nodejs-src/loader/: host-runtime.ts  script-api.ts  script-loader.ts  script-manifest.ts  script-registry.ts
app/src/main/assets/nodejs-src/ui/: components.ts  renderer.ts
app/src/main/assets/nodejs/bridge/: bridge.js
app/src/main/assets/nodejs/core/: logger.js  models.js  protocol.js
app/src/main/assets/nodejs/loader/: host-runtime.js  script-api.js  script-loader.js  script-manifest.js  script-registry.js
app/src/main/assets/test_script/: manifest.json
app/src/main/cpp/: CMakeLists.txt  binding.gyp  native-lib.cpp  spotifyengine.cpp  spotifyengine.h  spotifyplus-exports.cpp  spotifyplus_bridge.cpp
app/src/main/res/layout/: lyrics_page.xml
app/src/main/res/values/: strings.xml  strings_manager.xml  strings_settings.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: package.json
scripts/src/: app.tsx  index.tsx
scripts/src/Entities/: playback-clock.ts  syllable.tsx
scripts/src/Lyrics/: lyrics-view.tsx
(+125 files in other folders)
